Use full release artifact from reasoner test data