@@ -11,7 +11,7 @@
 	<artifactId>reasoner-elk-snomed</artifactId>
 
 	<properties>
-		<failsafeArgLine>--enable-preview -Xmx12G</failsafeArgLine>
+		<failsafeArgLine>-Xmx12G</failsafeArgLine>
 	</properties>
 
 	<dependencies>
@@ -99,6 +99,13 @@
 									<version>${snomed-test-data.version}</version>
 									<type>zip</type>
 								</artifactItem>
+								<artifactItem>
+									<groupId>${snomed-test-data.groupid}</groupId>
+									<artifactId>
+										snomed-test-data-intl-full</artifactId>
+									<version>${snomed-test-data.version}</version>
+									<type>zip</type>
+								</artifactItem>
 							</artifactItems>
 							<outputDirectory>
 								${project.build.directory}/data</outputDirectory>
@@ -117,28 +124,28 @@
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-intl-20240701</artifactId>
-									<version>2025.03.28</version>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-intl-20250101</artifactId>
-									<version>2025.03.28</version>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-us-20240901</artifactId>
-									<version>2025.03.28</version>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 								<artifactItem>
 									<groupId>${reasoner-test-data.groupid}</groupId>
 									<artifactId>
 										tinkar-test-data-build-snomed-us-20250301</artifactId>
-									<version>2025.03.28</version>
+									<version>2025.04.28</version>
 									<type>zip</type>
 								</artifactItem>
 							</artifactItems>
@@ -147,6 +154,15 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/ElkSnomedIncrementalTestIT.java</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
